# easyLogger

./: Cargo.toml  README.md
src/: lib.rs
tests/: log.rs
