[package]
name = "easy-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4.17", features=["std"]}
time = {version="0.3.9", features=["formatting", "local-offset", "std"]}
colored = "2.0.0"
# tools = {path = "../tools", features=["fs"]}